--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "embla-carousel-react": "^8.6.0",
     "firebase": "^12.8.0",
     "framer-motion": "^12.27.5",
+    "gsap": "^3.14.2",
     "input-otp": "^1.4.2",
     "jose": "^6.1.3",
     "lucide-react": "^0.562.0",
