--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "firebase": "^12.8.0",
     "framer-motion": "^12.27.5",
     "gsap": "^3.14.2",
+    "inngest": "^3.49.3",
     "input-otp": "^1.4.2",
     "jose": "^6.1.3",
     "lucide-react": "^0.562.0",
