--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@google/genai": "^1.38.0",
     "@hookform/resolvers": "^5.2.2",
     "@polar-sh/sdk": "^0.42.2",
     "@radix-ui/react-accordion": "^1.2.12",
